# stm32f303k8-template

./: README.md  build.sh  flash.bash
cmake/: TOOLCHAIN_arm_none_eabi_cortex_m4.cmake
source/: CMakeLists.txt  dev_led.c  dev_uart.c  main.c  stm32f30x_it.c
source/inc/: dev_led.h  dev_timer.h  dev_uart.h  list.h  platform_config.h  stm32f30x_sysclk.h  stm32f30x_tools.h
source/libs/: LinkerScript.ld
source/libs/StdPeriph_Driver/src/: stm32f30x_rcc.c  stm32f30x_usart.c
source/libs/startup/: startup_stm32.s
